clean up HTML to make mobile friendly

--- a/Pages/MFMALearning/index.html
+++ b/Pages/MFMALearning/index.html
@@ -5,100 +5,100 @@
   title: MFMA Learning}
 
 ---
-<div class="mainContent">
-<table border="0" cellpadding="4" cellspacing="0" width="97%">
-<tr>
-<td colspan="3" style="padding:0" valign="top" width="100%">
-<div id="ctl00_PlaceHolderMain_PageContent__ControlWrapper_RichHtmlField" style="display:inline"><p><font color="#800000" size="4"><strong></strong></font><font face="Calibri"> </font></p>
-<p align="center"><font face="Calibri"><img border="0" height="54" src="/PublishingImages/head.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid" width="741"/></font></p>
 <div>
-<table align="center" border="0" cellpadding="0" cellspacing="8" width="740">
+<table>
+<tr>
+<td>
+<div><p><font><strong></strong></font><font> </font></p>
+<p><font><img src="/PublishingImages/head.jpg"/></font></p>
+<div>
+<table>
 <tbody>
 <tr>
-<td style="padding-top:0px"><font class="HeadingMain"><font color="#8c1603">
-<div style="padding-left:15px"><br>
-<table border="0" width="700">
+<td><font><font>
+<div><br>
+<table>
 <tbody>
-<tr valign="top">
-<td align="middle" class="test1" style="width:25%"><a class="BasicText" href="http://nt.treasury.gov.za/mfmalearning/Login.asp" target="_blank"><font color="#000000" face="Calibri">Learner Login</font></a></td>
-<td align="middle" class="test1" style="width:25%"><a class="BasicText" href="http://nt.treasury.gov.za/mfmalearning/Register.asp" target="_blank"><font color="#000000" face="Calibri">Learner Registration</font></a></td>
-<td align="middle" class="test1" style="width:25%"><a class="BasicText" href="http://mfma.treasury.gov.zamailto:mfmalearning@treasury.gov.za" target="_blank"><font color="#000000" face="Calibri">Contact Administrator</font></a><font color="#000000" face="Calibri"> </font></td>
-<td align="middle" class="test1" style="width:25%"><a class="BasicText" href="http://nt.treasury.gov.za/mfmalearning/admin/login.asp" target="_blank"><font color="#000000" face="Calibri">Coordinator Login</font></a></td></tr></tbody></table><br>
-<table border="0" class="contactsTables" width="700">
+<tr>
+<td><a href="http://nt.treasury.gov.za/mfmalearning/Login.asp" target="_blank"><font>Learner Login</font></a></td>
+<td><a href="http://nt.treasury.gov.za/mfmalearning/Register.asp" target="_blank"><font>Learner Registration</font></a></td>
+<td><a href="http://mfma.treasury.gov.zamailto:mfmalearning@treasury.gov.za" target="_blank"><font>Contact Administrator</font></a><font> </font></td>
+<td><a href="http://nt.treasury.gov.za/mfmalearning/admin/login.asp" target="_blank"><font>Coordinator Login</font></a></td></tr></tbody></table><br>
+<table>
 <tbody>
-<tr class="test1" valign="top">
-<td align="middle" class="BasicTextBold"><font color="#000000" face="Calibri">MFMA Learning : Software Upgrade No 1 of 1</font></td></tr>
-<tr valign="top">
-<td align="middle" class="BasicTextBold"><font color="#000000" face="Calibri"></font></td></tr>
-<tr class="test1" valign="top">
-<td align="middle" class="BasicText"><font color="#000000" face="Calibri">To download this essential upgrade and for instructions on how to install the upgrade</font></td></tr>
-<tr valign="top">
-<td align="middle" class="BasicTextBold"><font color="#000000" face="Calibri"></font></td></tr>
-<tr class="test1" valign="top">
-<td align="middle"><a class="BasicText" href="http://mfma.treasury.gov.za/Pages/Update.aspx" title=""><font color="#000000" face="Calibri">Click Here</font></a></td></tr>
-<tr valign="top">
-<td align="middle" class="BasicTextBold"><font face="Calibri"></font></td></tr></tbody></table><br>
-<table border="0" class="test1" width="700">
+<tr>
+<td><font>MFMA Learning : Software Upgrade No 1 of 1</font></td></tr>
+<tr>
+<td><font></font></td></tr>
+<tr>
+<td><font>To download this essential upgrade and for instructions on how to install the upgrade</font></td></tr>
+<tr>
+<td><font></font></td></tr>
+<tr>
+<td><a href="http://mfma.treasury.gov.za/Pages/Update.aspx"><font>Click Here</font></a></td></tr>
+<tr>
+<td><font></font></td></tr></tbody></table><br>
+<table>
 <tbody>
-<tr valign="top">
-<td align="middle" style="width:620px"><a class="BasicTextBold"><strong><font color="#000000" face="Calibri" size="4">About MFMA learning</font></strong></a></td></tr>
-<tr valign="top">
+<tr>
+<td><a><strong><font>About MFMA learning</font></strong></a></td></tr>
+<tr>
 <td>
 <ul>
-<li class="test1"><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/02%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">02 What is MFMA Learning?</font></a></li>
-<li><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/03%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">03 How much will it cost to undertake the learning?</font></a></li>
-<li><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/04%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">04 What are the topics covered?</font></a></li>
-<li><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/05%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">05 How does MFMA learning link to accredited courses and competency levels?</font></a></li>
-<li><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/06%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">06 Who should undertake MFMA learning?</font></a></li>
-<li><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/07%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">07 How does learning take place and how long does it take to complete?</font></a></li>
-<li><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/08%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">08 How does the learner access the learning material for future reference?</font></a></li>
-<li><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/09%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">09 How is the software installed?</font></a></li>
-<li><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/10%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">10 What computer specifications are required?</font></a></li>
-<li><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/11%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">11 What learner literacy levels are required?</font></a></li>
-<li><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/12%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">12 What support mechanisms are in place for the learner?</font></a></li>
-<li><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/13%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">13 How do learners register for the MFMA Learning programme?</font></a></li>
-<li><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/14%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">14 How do learners continue learning from a different computer?</font></a></li>
-<li><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/15%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">15 How do learners track progress and receive completion certificates?</font></a></li>
-<li><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/16%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">16 How do coordinators track progress?</font></a></li>
-<li><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/17%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">17 How can education &amp; training providers access the MFMA Learning programme?</font></a></li><br><br>
-<li><a class="BasicText" href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/00%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank" title=""><font color="#000000" face="Calibri">Full "About MFMA Learning" document</font></a></li></br></br></ul></td></tr></tbody></table></br></br></br></div></font></font></td></tr></tbody></table></div></div>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/02%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>02 What is MFMA Learning?</font></a></li>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/03%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>03 How much will it cost to undertake the learning?</font></a></li>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/04%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>04 What are the topics covered?</font></a></li>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/05%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>05 How does MFMA learning link to accredited courses and competency levels?</font></a></li>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/06%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>06 Who should undertake MFMA learning?</font></a></li>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/07%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>07 How does learning take place and how long does it take to complete?</font></a></li>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/08%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>08 How does the learner access the learning material for future reference?</font></a></li>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/09%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>09 How is the software installed?</font></a></li>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/10%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>10 What computer specifications are required?</font></a></li>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/11%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>11 What learner literacy levels are required?</font></a></li>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/12%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>12 What support mechanisms are in place for the learner?</font></a></li>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/13%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>13 How do learners register for the MFMA Learning programme?</font></a></li>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/14%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>14 How do learners continue learning from a different computer?</font></a></li>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/15%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>15 How do learners track progress and receive completion certificates?</font></a></li>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/16%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>16 How do coordinators track progress?</font></a></li>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/17%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>17 How can education &amp; training providers access the MFMA Learning programme?</font></a></li><br><br>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/00%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>Full "About MFMA Learning" document</font></a></li></br></br></ul></td></tr></tbody></table></br></br></br></div></font></font></td></tr></tbody></table></div></div>
 </td>
 </tr>
 <tr>
-<td style="padding:0" valign="top">
-<table border="0" cellpadding="4" cellspacing="0" height="100%" width="100%">
+<td>
+<table>
 <tr>
-<td colspan="3" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 <tr>
-<td colspan="3" style="padding:0" valign="top" width="100%">
-<table cellpadding="4" cellspacing="0" height="100%" width="100%">
+<td>
+<table>
 <tr>
-<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 </table>
 </td>
 </tr> <tr>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 <tr>
-<td colspan="3" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 </table>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
-<script language="javascript">if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
+<script>if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
 </table>
 </div>
