--- a/TrainingandValidation/index.html
+++ b/TrainingandValidation/index.html
@@ -5,77 +5,77 @@
   title: Training & Validation}
 
 ---
-<div class="mainContent">
-<table border="0" cellpadding="4" cellspacing="0" width="97%">
+<div>
+<table>
 <tr>
-<td colspan="3" style="padding:0" valign="top" width="100%">
-<div id="ctl00_PlaceHolderMain_PageContent__ControlWrapper_RichHtmlField" style="display:inline"><br>
-<table align="justify" border="0" style="font-family:calibri;font-size:11pt" width="700">
+<td>
+<div><br>
+<table>
 <tbody>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/TrainingandValidation/reg_gaz" title=""><font color="#000000">Minimum Competency Levels</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/TrainingandValidation/Pages/InternshipProgramme.aspx" title=""><font color="#000000">Internship Programme</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Pages/MFMALearning.aspx" title=""><font color="#000000">Interactive Multimedia Learning - MFMA</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/pdf16.gif" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/MFMA/Training%20and%20Validation/MFM%20skills%20training%20programme%20Learner%20Guidelines%20And%20Logbook.pdf" target="_blank" title=""><font color="#000000">Learner Guidelines and Logbook</font></a></td>
-<td><font color="#000000">(694kb)</font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/TrainingandValidation/Pages/TrainingProvidersandModules.aspx" title=""><font color="#000000">Training Providers and Modules</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/TrainingandValidation/Pages/UnitStandardsSAQALevels5and6.aspx" title=""><font color="#000000">Unit Standards SAQA Levels 5 and 6</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/TrainingandValidation/Pages/Links.aspx" title=""><font color="#000000">Links</font></a></td></tr></tbody></table></br></div>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/TrainingandValidation/reg_gaz"><font>Minimum Competency Levels</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/TrainingandValidation/Pages/InternshipProgramme.aspx"><font>Internship Programme</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/Pages/MFMALearning.aspx"><font>Interactive Multimedia Learning - MFMA</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/MFMA/Training%20and%20Validation/MFM%20skills%20training%20programme%20Learner%20Guidelines%20And%20Logbook.pdf" target="_blank"><font>Learner Guidelines and Logbook</font></a></td>
+<td><font>(694kb)</font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/TrainingandValidation/Pages/TrainingProvidersandModules.aspx"><font>Training Providers and Modules</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/TrainingandValidation/Pages/UnitStandardsSAQALevels5and6.aspx"><font>Unit Standards SAQA Levels 5 and 6</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/TrainingandValidation/Pages/Links.aspx"><font>Links</font></a></td></tr></tbody></table></br></div>
 </td>
 </tr>
 <tr>
-<td style="padding:0" valign="top">
-<table border="0" cellpadding="4" cellspacing="0" height="100%" width="100%">
+<td>
+<table>
 <tr>
-<td colspan="3" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 <tr>
-<td colspan="3" style="padding:0" valign="top" width="100%">
-<table cellpadding="4" cellspacing="0" height="100%" width="100%">
+<td>
+<table>
 <tr>
-<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 </table>
 </td>
 </tr> <tr>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 <tr>
-<td colspan="3" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 </table>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
-<script language="javascript">if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
+<script>if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
 </table>
 </div>
