--- a/index.html
+++ b/index.html
@@ -4,78 +4,78 @@
   title: MFMA}
 
 ---
-<div class="mainContent">
-<table border="0" cellpadding="4" cellspacing="0" width="97%">
+<div>
+<table>
 <tr>
-<td colspan="3" style="padding:0" valign="top" width="100%">
-<div id="ctl00_PlaceHolderMain_PageContent__ControlWrapper_RichHtmlField" style="display:inline"></div>
+<td>
+<div></div>
 </td>
 </tr>
 <tr>
-<td style="padding:0" valign="top">
-<table border="0" cellpadding="4" cellspacing="0" height="100%" width="100%">
+<td>
+<table>
 <tr>
-<td colspan="3" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
-<table border="0" cellpadding="0" cellspacing="0" width="100%">
+<td>
+<table>
 <tr>
-<td id="MSOZoneCell_WebPartWPQ2" valign="top"><table border="0" cellpadding="0" cellspacing="0" toplevel="" width="100%">
+<td><table>
 <tr>
-<td valign="top"><div allowdelete="false" class="ms-WPBody" haspers="false" id="WebPartWPQ2" style="" webpartid="b2f80b6f-49ba-4521-9a46-7aa3b6ede053" width="100%"><p align="justify" style="FONT-FAMILY: calibri; FONT-SIZE: 11pt">The National Treasury has played a pivotal role in the introduction of financial management reforms across government since 1994 and in local government since 1996. The cornerstone of the reform initiative has been implemented through the Municipal Finance Management Act No. 56 of 2003 (MFMA), which became effective in July 2004 and supported by the annual Division of Revenue Act. These pieces of legislation have been aligned with other local government legislation, such as the Structures Act, Systems Act, Property Rates Act and their regulations, to form a coherent package.<br><br>National Treasury's primary objective is to secure sound and sustainable management of the financial affairs of government, national, provincial and local, and to lead such policies and reforms. This entails supporting the development of a coherent approach that assists in the improvement of delivery of services to communities. The mechanisms used for this support ranges from regulatory interventions, manuals, guidance, circulars, workshops, seminars, training, internship programmes and hands on support to municipalities.<br><br>To fulfill this responsibility in the local government sphere, the National Treasury has developed a phased implementation strategy of financial and technical support for local government based around the MFMA, including conditional grants, subsidies, technical guidelines, policy advice and the placement of international advisors with various municipalities. This strategy takes into account the diverse capacity of municipalities for implementing the reforms and the requirement for institutional strengthening, building municipal capacity and improving municipal consultation, reporting, transparency and accountability. The implementation strategy requires close co-operation with other departments in national and provincial spheres.<br><br><br><strong><span style="TEXT-DECORATION: underline">What are the aims of the MFMA?</span><br/></strong><br><br>The MFMA aims to modernise budget, accounting and financial management practices by placing local government finances on a sustainable footing in order to maximise the capacity of municipalities to deliver services to communities. It also aims to put in place a sound financial governance framework by clarifying and separating the roles and responsibilities of the council, mayor and officials.<br><br>The MFMA is required by the Constitution, which obliges all three spheres of government to be transparent about their financial affairs. It also forms an integral part of the broader reform package for local government, as outlined in the 1998 White Paper on Local Government.<br><br><strong><span style="TEXT-DECORATION: underline">Contact</span></strong><br><br>All enquiries and requests for information should be directed to the MFMA helpline email below. This service is provided to municipalities, municipal entities and governments only.<br><br>Consultants and companies must direct their enquiries via the particular municipality or entity that they are working for.<br><br>
-</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></p><hr style="COLOR: #8c1603">
-<table align="center" border="0" cellpadding="5" cellspacing="4">
+<td><div><p>The National Treasury has played a pivotal role in the introduction of financial management reforms across government since 1994 and in local government since 1996. The cornerstone of the reform initiative has been implemented through the Municipal Finance Management Act No. 56 of 2003 (MFMA), which became effective in July 2004 and supported by the annual Division of Revenue Act. These pieces of legislation have been aligned with other local government legislation, such as the Structures Act, Systems Act, Property Rates Act and their regulations, to form a coherent package.<br><br>National Treasury's primary objective is to secure sound and sustainable management of the financial affairs of government, national, provincial and local, and to lead such policies and reforms. This entails supporting the development of a coherent approach that assists in the improvement of delivery of services to communities. The mechanisms used for this support ranges from regulatory interventions, manuals, guidance, circulars, workshops, seminars, training, internship programmes and hands on support to municipalities.<br><br>To fulfill this responsibility in the local government sphere, the National Treasury has developed a phased implementation strategy of financial and technical support for local government based around the MFMA, including conditional grants, subsidies, technical guidelines, policy advice and the placement of international advisors with various municipalities. This strategy takes into account the diverse capacity of municipalities for implementing the reforms and the requirement for institutional strengthening, building municipal capacity and improving municipal consultation, reporting, transparency and accountability. The implementation strategy requires close co-operation with other departments in national and provincial spheres.<br><br><br><strong><span>What are the aims of the MFMA?</span><br/></strong><br><br>The MFMA aims to modernise budget, accounting and financial management practices by placing local government finances on a sustainable footing in order to maximise the capacity of municipalities to deliver services to communities. It also aims to put in place a sound financial governance framework by clarifying and separating the roles and responsibilities of the council, mayor and officials.<br><br>The MFMA is required by the Constitution, which obliges all three spheres of government to be transparent about their financial affairs. It also forms an integral part of the broader reform package for local government, as outlined in the 1998 White Paper on Local Government.<br><br><strong><span>Contact</span></strong><br><br>All enquiries and requests for information should be directed to the MFMA helpline email below. This service is provided to municipalities, municipal entities and governments only.<br><br>Consultants and companies must direct their enquiries via the particular municipality or entity that they are working for.<br><br>
+</br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></br></p><hr>
+<table>
 <tbody>
-<tr valign="center">
-<td rowspan="5" style="FONT-FAMILY: calibri; FONT-SIZE: 11pt" width="220"><img border="0" src="/PublishingImages/NT-letterhead.jpg" style="BORDER-BOTTOM: 0px solid; BORDER-LEFT: 0px solid; WIDTH: 217px; HEIGHT: 79px; BORDER-TOP: 0px solid; BORDER-RIGHT: 0px solid"/></td>
-<td align="right" style="FONT-FAMILY: calibri; FONT-SIZE: 11pt" width="100">Postal</td>
-<td align="left" style="FONT-FAMILY: calibri; FONT-SIZE: 11pt" width="215">Private Bag X115, Pretoria 0001</td></tr>
 <tr>
-<td align="right" style="FONT-FAMILY: calibri; FONT-SIZE: 11pt">Phone</td>
-<td align="left" style="FONT-FAMILY: calibri; FONT-SIZE: 11pt">012 315 5850</td></tr>
+<td><img src="/PublishingImages/NT-letterhead.jpg"/></td>
+<td>Postal</td>
+<td>Private Bag X115, Pretoria 0001</td></tr>
 <tr>
-<td align="right" style="FONT-FAMILY: calibri; FONT-SIZE: 11pt">Fax</td>
-<td align="left" style="FONT-FAMILY: calibri; FONT-SIZE: 11pt">012 315 5230</td></tr>
+<td>Phone</td>
+<td>012 315 5850</td></tr>
 <tr>
-<td align="right" style="FONT-FAMILY: calibri; FONT-SIZE: 11pt">Email</td>
-<td align="left" style="FONT-FAMILY: calibri; FONT-SIZE: 11pt"><a href="http://mfma.treasury.gov.zamailto:mfma@treasury.gov.za">mfma@treasury.gov.za</a></td></tr>
+<td>Fax</td>
+<td>012 315 5230</td></tr>
 <tr>
-<td align="right" style="FONT-FAMILY: calibri; FONT-SIZE: 11pt">Website</td>
-<td align="left" style="FONT-FAMILY: calibri; FONT-SIZE: 11pt"><a href="http://mfma.treasury.gov.za/">http://mfma.treasury</a></td></tr></tbody></table>
-<hr style="COLOR: #8c1603">
-<p align="justify" style="FONT-FAMILY: calibri; FONT-SIZE: 11pt">  
-</p><p align="left"><font color="#ff0000" face="Verdana" size="2">These National Treasury publications may not be reproduced wholly or in part without the express authorisation of the National Treasury in writing unless used for non-profit purposes.</font></p></hr></hr></div></td>
+<td>Email</td>
+<td><a href="http://mfma.treasury.gov.zamailto:mfma@treasury.gov.za">mfma@treasury.gov.za</a></td></tr>
+<tr>
+<td>Website</td>
+<td><a href="http://mfma.treasury.gov.za/">http://mfma.treasury</a></td></tr></tbody></table>
+<hr>
+<p>  
+</p><p><font>These National Treasury publications may not be reproduced wholly or in part without the express authorisation of the National Treasury in writing unless used for non-profit purposes.</font></p></hr></hr></div></td>
 </tr>
 </table></td>
 </tr>
 </table> </td>
 </tr>
 <tr>
-<td colspan="3" style="padding:0" valign="top" width="100%">
-<table cellpadding="4" cellspacing="0" height="100%" width="100%">
+<td>
+<table>
 <tr>
-<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 </table>
 </td>
 </tr> <tr>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 <tr>
-<td colspan="3" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 </table>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
-<script language="javascript">if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
+<script>if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
 </table>
 </div>
