--- a/Legislation/index.html
+++ b/Legislation/index.html
@@ -5,105 +5,105 @@
   title: Legislation}
 
 ---
-<div class="mainContent">
-<table border="0" cellpadding="4" cellspacing="0" width="97%">
+<div>
+<table>
 <tr>
-<td colspan="3" style="padding:0" valign="top" width="100%">
-<div id="ctl00_PlaceHolderMain_PageContent__ControlWrapper_RichHtmlField" style="display:inline"><br>
-<table border="0" style="font-family:calibri;font-size:11pt" width="700">
+<td>
+<div><br>
+<table>
 <tbody>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Legislation/Irfa" title=""><font color="#000000">Intergovernmental Relations Framework Act</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Legislation/lgmpra" title=""><font color="#000000">Local Government: Municipal Property Rates Act</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Legislation/lgmfma" title=""><font color="#000000">Local Government: Municipal Finance Management Act</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Legislation/lgmsya" title=""><font color="#000000">Local Government: Municipal Systems Act</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Legislation/lgmsta" title=""><font color="#000000">Local Government: Municipal Structures Act</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Legislation/lgmda" title=""><font color="#000000">Local Government: Municipal Demarcation Act</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Legislation/wsa" title=""><font color="#000000">Water Services Act</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Legislation/Ifra" title=""><font color="#000000">Intergovernmental Fiscal Relations Act</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Legislation/cons" title=""><font color="#000000">Constitution, No. 108 of 1996 and local government amendment</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Legislation/lgta" title=""><font color="#000000">Local Government: Transition Act</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Legislation/era" title=""><font color="#000000">Electricity Regulation Act</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/Folder.jpg" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/Legislation/MFPFA" title=""><font color="#000000">Municipal Fiscal Powers and Functions Act (MFPFA)</font></a></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"></font></td>
-<td><font color="#000000"> </font></td>
-<td><font color="#000000"></font></td></tr>
-<tr valign="top">
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/pdf16.gif" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/MFMA/Legislation/Municipal%20Fiscal%20Powers%20and%20Functions%20Act.pdf" target="_blank" title=""><font color="#000000">Municipal Fiscal Powers and Functions Act, No. 12 of 2007</font></a></td></tr></tbody></table></br></div>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/Legislation/Irfa"><font>Intergovernmental Relations Framework Act</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/Legislation/lgmpra"><font>Local Government: Municipal Property Rates Act</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/Legislation/lgmfma"><font>Local Government: Municipal Finance Management Act</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/Legislation/lgmsya"><font>Local Government: Municipal Systems Act</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/Legislation/lgmsta"><font>Local Government: Municipal Structures Act</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/Legislation/lgmda"><font>Local Government: Municipal Demarcation Act</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/Legislation/wsa"><font>Water Services Act</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/Legislation/Ifra"><font>Intergovernmental Fiscal Relations Act</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/Legislation/cons"><font>Constitution, No. 108 of 1996 and local government amendment</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/Legislation/lgta"><font>Local Government: Transition Act</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/Legislation/era"><font>Electricity Regulation Act</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/Folder.jpg"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/Legislation/MFPFA"><font>Municipal Fiscal Powers and Functions Act (MFPFA)</font></a></td>
+<td><font></font></td></tr>
+<tr>
+<td><font></font></td>
+<td><font> </font></td>
+<td><font></font></td></tr>
+<tr>
+<td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/MFMA/Legislation/Municipal%20Fiscal%20Powers%20and%20Functions%20Act.pdf" target="_blank"><font>Municipal Fiscal Powers and Functions Act, No. 12 of 2007</font></a></td></tr></tbody></table></br></div>
 </td>
 </tr>
 <tr>
-<td style="padding:0" valign="top">
-<table border="0" cellpadding="4" cellspacing="0" height="100%" width="100%">
+<td>
+<table>
 <tr>
-<td colspan="3" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 <tr>
-<td colspan="3" style="padding:0" valign="top" width="100%">
-<table cellpadding="4" cellspacing="0" height="100%" width="100%">
+<td>
+<table>
 <tr>
-<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 </table>
 </td>
 </tr> <tr>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 <tr>
-<td colspan="3" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 </table>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
-<script language="javascript">if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
+<script>if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
 </table>
 </div>
