--- a/Pages/Links/index.html
+++ b/Pages/Links/index.html
@@ -5,62 +5,62 @@
   title: Links to important websites}
 
 ---
-<div class="mainContent">
-<table border="0" cellpadding="4" cellspacing="0" width="97%">
+<div>
+<table>
 <tr>
-<td colspan="3" style="padding:0" valign="top" width="100%">
-<div id="ctl00_PlaceHolderMain_PageContent__ControlWrapper_RichHtmlField" style="display:inline"><br>
-<table border="0" style="font-family:calibri;font-size:11pt" width="700">
+<td>
+<div><br>
+<table>
 <tbody>
-<tr valign="top">
-<td align="middle"><img border="0" src="/PublishingImages/arrow.gif" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></td>
-<td><a href="http://www.dplg.gov.za/" target="_blank"><font color="#000000">DPLG</font></a></td>
+<tr>
+<td><img src="/PublishingImages/arrow.gif"/></td>
+<td><a href="http://www.dplg.gov.za/" target="_blank"><font>DPLG</font></a></td>
 <td></td></tr>
-<tr valign="top">
-<td align="middle"><img border="0" src="/PublishingImages/arrow.gif" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></td>
-<td><a href="http://www.salga.net/" target="_blank"><font color="#000000">SALGA</font></a></td>
+<tr>
+<td><img src="/PublishingImages/arrow.gif"/></td>
+<td><a href="http://www.salga.net/" target="_blank"><font>SALGA</font></a></td>
 <td></td></tr>
-<tr valign="top">
-<td align="middle"><img border="0" src="/PublishingImages/arrow.gif" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></td>
-<td><a href="http://www.demarcation.org.za/"><font color="#000000">Municipal Demarcation Board - Maps</font></a></td>
+<tr>
+<td><img src="/PublishingImages/arrow.gif"/></td>
+<td><a href="http://www.demarcation.org.za/"><font>Municipal Demarcation Board - Maps</font></a></td>
 <td></td></tr></tbody></table></br></div>
 </td>
 </tr>
 <tr>
-<td style="padding:0" valign="top">
-<table border="0" cellpadding="4" cellspacing="0" height="100%" width="100%">
+<td>
+<table>
 <tr>
-<td colspan="3" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 <tr>
-<td colspan="3" style="padding:0" valign="top" width="100%">
-<table cellpadding="4" cellspacing="0" height="100%" width="100%">
+<td>
+<table>
 <tr>
-<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 </table>
 </td>
 </tr> <tr>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 <tr>
-<td colspan="3" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 </table>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
-<script language="javascript">if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
+<script>if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
 </table>
 </div>
