--- a/Pages/faq/index.html
+++ b/Pages/faq/index.html
@@ -5,53 +5,53 @@
   title: Frequently Asked Questions}
 
 ---
-<div class="mainContent">
-<table border="0" cellpadding="4" cellspacing="0" width="97%">
+<div>
+<table>
 <tr>
-<td colspan="3" style="padding:0" valign="top" width="100%">
-<div id="ctl00_PlaceHolderMain_PageContent__ControlWrapper_RichHtmlField" style="display:inline"><strong><br/></strong>
-<table align="justify" border="0" style="font-family:calibri;font-size:11pt" width="700">
+<td>
+<div><strong><br/></strong>
+<table>
 <tbody>
 <tr>
-<td align="middle"><font color="#000000"><img border="0" src="/PublishingImages/pdf16.gif" style="border-bottom:0px solid;border-left:0px solid;border-top:0px solid;border-right:0px solid"/></font></td>
-<td><a href="http://mfma.treasury.gov.za/MFMA/FAQs/FAQ1.pdf" target="_blank" title=""><font color="#000000">FAQ Version 1 : 31 January 2005</font></a></td></tr></tbody></table></div>
+<td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
+<td><a href="http://mfma.treasury.gov.za/MFMA/FAQs/FAQ1.pdf" target="_blank"><font>FAQ Version 1 : 31 January 2005</font></a></td></tr></tbody></table></div>
 </td>
 </tr>
 <tr>
-<td style="padding:0" valign="top">
-<table border="0" cellpadding="4" cellspacing="0" height="100%" width="100%">
+<td>
+<table>
 <tr>
-<td colspan="3" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 <tr>
-<td colspan="3" style="padding:0" valign="top" width="100%">
-<table cellpadding="4" cellspacing="0" height="100%" width="100%">
+<td>
+<table>
 <tr>
-<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 </table>
 </td>
 </tr> <tr>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 <tr>
-<td colspan="3" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
 </table>
 </td>
-<td height="100%" id="_invisibleIfEmpty" name="_invisibleIfEmpty" valign="top">
+<td>
 </td>
 </tr>
-<script language="javascript">if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
+<script>if(typeof(MSOLayout_MakeInvisibleIfEmpty) == "function") {MSOLayout_MakeInvisibleIfEmpty();}</script>
 </table>
 </div>
