--- a/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/index.html
+++ b/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/index.html
@@ -1,9 +1,9 @@
 ---
 {breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
-    href="/Pages/Default.aspx">MFMA</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
-    href="/RegulationsandGazettes/Pages/default.aspx">Regulations and Gazettes</a></span><span>
-    &gt; </span><span class="breadcrumbCurrent">Municipal Regulations On A Standard
-    Chart Of Accounts</span></span>, layout: default, original_url: 'http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Pages/default.aspx',
+    href="/">MFMA</a></span><span> &gt; </span><span><a class="ms-sitemapdirectional"
+    href="/RegulationsandGazettes/">Regulations and Gazettes</a></span><span> &gt;
+    </span><span class="breadcrumbCurrent">Municipal Regulations On A Standard Chart
+    Of Accounts</span></span>, layout: default, original_url: 'http://mfma.treasury.gov.za/RegulationsandGazettes/MunicipalRegulationsOnAStandardChartOfAccountsFinal/Pages/default.aspx',
   title: Municipal Regulations On A Standard Chart Of Accounts}
 
 ---
