--- a/Guidelines/index.html
+++ b/Guidelines/index.html
@@ -1,6 +1,6 @@
 ---
 {breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
-    href="/Pages/Default.aspx">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Guidelines</span></span>,
+    href="/">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Guidelines</span></span>,
   layout: default, original_url: 'http://mfma.treasury.gov.za/Guidelines/Pages/default.aspx',
   title: Guidelines}
 
