--- a/Pages/Links/index.html
+++ b/Pages/Links/index.html
@@ -1,6 +1,6 @@
 ---
 {breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
-    href="/Pages/Default.aspx">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Links
+    href="/">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Links
     to important websites</span></span>, layout: default, original_url: 'http://mfma.treasury.gov.za/Pages/Links.aspx',
   title: Links to important websites}
 
