--- a/Pages/MFMALearning/index.html
+++ b/Pages/MFMALearning/index.html
@@ -1,6 +1,6 @@
 ---
 {breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
-    href="/Pages/Default.aspx">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">MFMA
+    href="/">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">MFMA
     Learning</span></span>, layout: default, original_url: 'http://mfma.treasury.gov.za/Pages/MFMALearning.aspx',
   title: MFMA Learning}
 
