--- a/Pages/faq/index.html
+++ b/Pages/faq/index.html
@@ -1,6 +1,6 @@
 ---
 {breadcrumbs: <span id="ctl00_PlaceHolderTitleBreadcrumb_siteMapPath"><span><a class="ms-sitemapdirectional"
-    href="/Pages/Default.aspx">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Frequently
+    href="/">MFMA</a></span><span> &gt; </span><span class="breadcrumbCurrent">Frequently
     Asked Questions</span></span>, layout: default, original_url: 'http://mfma.treasury.gov.za/Pages/faq.aspx',
   title: Frequently Asked Questions}
 
