Clean up closing br mess

--- a/Guidelines/index.html
+++ b/Guidelines/index.html
@@ -71,7 +71,7 @@
 <tr>
 <td></td>
 <td>
-<li><b>Refer to National Treasury’s MFMA Circular Number 53 dated 3 September 2010 for<br>     amended guidelines in respect of bids that include functionality as a criterion for <br>     evaluation</br></br></b></li></td>
+<li><b>Refer to National Treasury’s MFMA Circular Number 53 dated 3 September 2010 for<br>     amended guidelines in respect of bids that include functionality as a criterion for <br>     evaluation<br><br></b></li></td>
 <td></td></tr>
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
