--- a/Media_Releases/index.html
+++ b/Media_Releases/index.html
@@ -93,7 +93,7 @@
 <tr>
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
 <td><a href="http://mfma.treasury.gov.za/MFMA/Publications%20and%20Media%20Releases/Media%20Statement%20MFMA.pdf" target="_blank"><font>Modernising financial governance (Launch of MFMA) - 29 June 2004</font></a></td>
-<td><font>(21kb)</font></td></tr></tbody></table><br/></br></br></div>
+<td><font>(21kb)</font></td></tr></tbody></table><br/><br><br></div>
 </td>
 </tr>
 <tr>
