--- a/Pages/UrbanZone/index.html
+++ b/Pages/UrbanZone/index.html
@@ -103,7 +103,7 @@
 <td><font><img src="/PublishingImages/jpg_icon.gif"/></font></td>
 <td><a href="http://mfma.treasury.gov.za/Urban%20Development%20Zones/Tshwane_small.jpg" target="_blank"><font>Tshwane UDZ map</font></a></td>
 <td><font>(180kb)</font></td></tr></tbody></table><br>
-<p><font>Cape Town Municipality - </font><a href="http://www.capetown.gov.za/" target="_blank"><font>http://www.capetown.gov.za</font></a><br><font>Johannesburg Municipality - </font><a href="http://www.joburg.org.za/" target="_blank"><font>http://www.joburg.org.za</font></a><font> </font></br></p></br></br></div>
+<p><font>Cape Town Municipality - </font><a href="http://www.capetown.gov.za/" target="_blank"><font>http://www.capetown.gov.za</font></a><br><font>Johannesburg Municipality - </font><a href="http://www.joburg.org.za/" target="_blank"><font>http://www.joburg.org.za</font></a><font> </font></br></p><br><br></div>
 <p><font> </font></p></div>
 </td>
 </tr>
