--- a/RegulationsandGazettes/index.html
+++ b/RegulationsandGazettes/index.html
@@ -241,7 +241,7 @@
 <td><a href="http://mfma.treasury.gov.za/MFMA/Regulations%20and%20Gazettes/MFMA%20Implementation%20dates%20(Excel%20version%20available%20on%20request).pdf" target="_blank"><font>MFMA Implementation dates (Excel version available on request)</font></a></td>
 <td><font>(47kb)</font></td></tr></tbody></table>
 <p> </p>
-<p> </p></br></br></div>
+<p> </p><br><br></div>
 </td>
 </tr>
 <tr>
