--- a/Return_Forms/index.html
+++ b/Return_Forms/index.html
@@ -348,7 +348,7 @@
 <td><font><img src="/PublishingImages/pdf16.gif"/></font></td>
 <td><font><a href="http://mfma.treasury.gov.za/Return_Forms/Documents/The%20Municipal%20Budget%20and%20Reporting%20requirements%20(July%202013)%20(final).pdf" target="_blank"><font>Section 71 Municipal Reporting Requirements for 2013/14</font></a><a href="http://mfma.treasury.gov.za/Return_Forms/Documents/Statement%20of%20Financial%20Performance%20Audited%20(OSAA)/Guidelines%20-%20Financial%20Performance%20Audited.pdf" target="_blank"><font></font></a></font></td></tr></tbody></table><br>
 <p><font> </font></p>
-<p><font> </font></p></br></br></br></br></br></br></br></br></div>
+<p><font> </font></p><br><br></div>
 </td>
 </tr>
 <tr>
