--- a/Pages/MFMALearning/index.html
+++ b/Pages/MFMALearning/index.html
@@ -61,7 +61,7 @@
 <li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/15%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>15 How do learners track progress and receive completion certificates?</font></a></li>
 <li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/16%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>16 How do coordinators track progress?</font></a></li>
 <li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/17%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>17 How can education &amp; training providers access the MFMA Learning programme?</font></a></li><br><br>
-<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/00%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>Full "About MFMA Learning" document</font></a></li></br></br></ul></td></tr></tbody></table></br></br></br></div></font></font></td></tr></tbody></table></div></div>
+<li><a href="http://mfma.treasury.gov.za/MFMA/MFMA%20learning/00%20MFMA%20Learning%20On%20Line%20Guide.pdf" target="_blank"><font>Full "About MFMA Learning" document</font></a></li><br><br></ul></td></tr></tbody></table><br><br></div></font></font></td></tr></tbody></table></div></div>
 </td>
 </tr>
 <tr>
